Fix platform select dark mode

--- a/styles/coin.module.less
+++ b/styles/coin.module.less
@@ -83,6 +83,7 @@
   }
 
   h1, h2, h3 {
+    color: var(--cr-primary-text);
     font-weight: bold;
     margin-bottom: 16px;
   }
