--- a/styles/platformSelect.module.less
+++ b/styles/platformSelect.module.less
@@ -25,15 +25,25 @@
 .selectPlatform {
   line-height: 32px;
 
-  span {
-    color: @text-color;
+  & > div {
+    background: var(--cr-tertiary-bg) !important;
+    border-color: var(--cr-secondary-border);
+    color: var(--cr-primary-text) !important;
+  }
+
+  path {
+    color: var(--cr-primary-text) !important;
+    fill: var(--cr-primary-text) !important;
   }
 }
 
 .selectDropdown {
+  background-color: var(--cr-tertiary-bg) !important;
+  fill: var(--cr-primary-text);
+
   .option {
     cursor: default;
-    color: @text-color;
+    color: var(--cr-primary-text);
 
     &:hover {
       background: @geekblue-1;
@@ -51,24 +61,7 @@
 }
 
 :root[data-theme="theme-dark"] {
-  .selectPlatform > div {
-    background: var(--cr-tertiary-bg) !important;
-    border-color: var(--cr-secondary-border);
-    color: var(--cr-primary-text) !important;
-  }
-
-  .selectPlatform > div > span, .selectPlatform path {
-    color: var(--cr-primary-text) !important;
-    fill: var(--cr-primary-text) !important;
-  }
-
-  .selectDropdown {
-    background-color: var(--cr-tertiary-bg) !important;
-    color: var(--cr-primary-text);
-    fill: var(--cr-primary-text);
-  }
-
-  .selectDropdown path {
-    fill: var(--cr-primary-text);
+  .selectDropdown .option:hover {
+    color: @cr-gray-2;
   }
 }
